--- a/serice-feign/src/main/resources/application.properties
+++ b/serice-feign/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=8676
 spring.application.name=serice-feign
+feign.hystrix.enabled=true
 eureka.client.service-url.defaultZone = http://localhost:8671/eureka/
